<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/msgCheck"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/last"
            android:gravity="center"
            android:text="@string/last"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/phone"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView1"
                android:background="@null"
                android:ems="11"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingLeft="5dp"
                android:text=""
                android:textColor="@color/gray_text"
                android:textSize="16sp">
            </EditText>
        </RelativeLayout>

        <include layout="@layout/layout_line"></include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/codeCheck"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/cord"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/textView3"
                android:background="@null"
                android:ems="6"
                android:inputType="phone"
                android:maxLength="6"
                android:paddingLeft="5dp"
                android:text=""
                android:textColor="@color/gray_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/getcord"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/cord"
                android:padding="5dp"
                android:background="@drawable/login_edit_normal_bg"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/getCode"
                android:visibility="visible" />
        </RelativeLayout>

        <include layout="@layout/layout_line"></include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/login_psd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/loginPassword"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_login_psd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_psd"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/login_psd"
                android:background="@null"
                android:ems="11"
                android:inputType="textPassword"
                android:maxLength="11"
                android:paddingLeft="5dp"
                android:text=""
                android:textColor="@color/gray_text"
                android:textSize="16sp">
            </EditText>
        </RelativeLayout>

        <include layout="@layout/layout_line"></include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/second_login_psd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/secondPassword"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_second_login_psd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/second_login_psd"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/second_login_psd"
                android:background="@null"
                android:ems="11"
                android:inputType="textPassword"
                android:maxLength="11"
                android:paddingLeft="5dp"
                android:textColor="@color/gray_text"
                android:textSize="16sp">
            </EditText>
        </RelativeLayout>
        <include layout="@layout/layout_line"></include>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/savecord"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/selector_red"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/now"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/savecord"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:text="提示信息"
        android:textColor="#aaaaaa" />
    </RelativeLayout>
</LinearLayout>
