<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="输入账号"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/last"
            android:gravity="center"
            android:text="@string/last"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/account"
                android:visibility="gone"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView1"
                android:background="@null"
                android:ems="11"
                android:hint="请输入你的登录账号"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:text=""
                android:textColor="@color/gray_text"
                android:textSize="16sp">
            </EditText>

        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_next"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/selector_red"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/next" />
    </RelativeLayout>
</LinearLayout>
